[package]
name = "chlorine"
version = "0.1.0"
description = "Twitch notification with native app."
repository = "https://github.com/misilelab3/chlorine"
authors = ["MisileLaboratory"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
serde_json = { version = "1.0.82"}
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"]}