[package]
name = "h2"
version = "0.1.0"
description = "Twitch notification with native app."
repository = "https://github.com/misilelab/h2"
authors = ["MisileLaboratory"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
serde_json = { version = "1.0.85"}
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"]}
notify-rust = "4.5.8"
h1 = { git = "https://github.com/misilelab/h1" }
strfmt = "0.2.2"
